environments/platform1-dev-dr/tools/istio-gateways/istio-in-gw-integ.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-in-gw-integ
  namespace: istio-gateway
spec:
  selector:
    app: istio-ingress
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
